# Project2Notebook

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
apps/web/: package.json
backend/: cli.py  config.py  exceptions.py  logging_config.py  main.py
backend/agents/: code_authoring.py  contracts.py  graph.py  state.py
backend/api/: chat.py  notebook.py  projects.py  run_pipeline.py  upload.py
backend/mcp_client/: client.py  registry.py  tool_result.py
backend/schemas/: api.py  data_audit.py  data_quality.py  eda_findings.py  experiment.py  notebook.py  project_spec.py  validation.py
backend/services/: artifact_store.py  checkpoint_store.py  code_runner.py  csv_io.py  file_store.py  llm.py  memory.py  notebook_builder.py  plotly_viz.py  project_store.py  run_result.py
backend/storage/: projects.json
backend/web/: dashboard.html
demo/: README.md  _generate_dataset.py  project_description.md  sample_dataset.csv
docker/: backend.Dockerfile  web.Dockerfile
docs/: PREPROCESSING_AND_EDA.md
mcp_servers/: _mlcommon.py  codegen_server.py  common.py  data_inspection_server.py  data_quality_server.py  eda_review_server.py  eda_server.py  experiment_server.py  modeling_server.py  notebook_server.py  preprocessing_server.py  prior_art_server.py  project_understanding_server.py  viz_server.py
tests/: conftest.py
tests/integration/: test_api_errors.py
tests/unit/: test_agent_tool_errors.py  test_checkpoint_store.py  test_csv_io.py  test_data_quality.py  test_eda_review.py  test_graph.py  test_llm.py  (+6 more)
(+36 files in other folders)
